src/test/ui/pattern/slice-pattern-const.stderr
error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:9:9
   |
LL |         [84, 69, 83, 84] => (),
   |         ^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/slice-pattern-const.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:15:9
   |
LL |         [84, 69, 83, 84] => (),
   |         ^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:21:9
   |
LL |         MAGIC_TEST => (),
   |         ^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:28:9
   |
LL |         FOO => (),
   |         ^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:35:9
   |
LL |         BAR => (),
   |         ^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:43:9
   |
LL |         BOO => (),
   |         ^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:44:9
   |
LL |         b"" => (),
   |         ^^^

error: unreachable pattern
  --> $DIR/slice-pattern-const.rs:45:9
   |
LL |         _ => (),
   |         ^

error: aborting due to 8 previous errors

